==> inclus16/VeloComputerAvr/VeloComputer/sh1106.c <==
#include <avr/io.h>
#include <stdio.h>
#include "sh1106.h"
#include <util/delay.h>

void command(uint8_t cmd){
	PORTD &= ~(1<<OLED_DC);
    SPIWrite(&cmd, 1);
}

void SPIWrite(uint8_t *buffer, int bufferLength) {
    int i;
    for (i = 0; i < bufferLength; i++) {
	    uint8_t data = buffer[i];		
		SPDR = data;
		while(!(SPSR & (1<<SPIF)));
    }
}

void SH1106_begin()
{
	DDRB |= ((1<<PORTB2)|(1<<PORTB3)|(1<<PORTB5)); 
	PORTB &= ~((1<<PORTB2)|(1<<PORTB3)|(1<<PORTB5)); 
	SPCR = (1<<SPE) | (1<<MSTR) | (1<<SPR1) | (1<<SPR0);
	SPDR = 0b00000000; 
	PORTD &= ~(1<<OLED_CS);
	PORTD |= (1<<OLED_RST);
    _delay_ms(10);
    PORTD &= ~(1<<OLED_RST);
    _delay_ms(10);
    PORTD |= (1<<OLED_RST);
    
    command(0xAE);//--turn off oled panel
    command(0x02);//---set low column address
    command(0x10);//---set high column address
    command(0x40);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
    command(0x81);//--set contrast control register
    command(0xA0);//--Set SEG/Column Mapping     
    command(0xC0);//Set COM/Row Scan Direction   
    command(0xA6);//--set normal display
    command(0xA8);//--set multiplex ratio(1 to 64)
    command(0x3F);//--1/64 duty
    command(0xD3);//-set display offset    Shift Mapping RAM Counter (0x00~0x3F)
    command(0x00);//-not offset
    command(0xd5);//--set display clock divide ratio/oscillator frequency
    command(0x80);//--set divide ratio, Set Clock as 100 Frames/Sec
    command(0xD9);//--set pre-charge period
    command(0xF1);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    command(0xDA);//--set com pins hardware configuration
    command(0x12);
    command(0xDB);//--set vcomh
    command(0x40);//Set VCOM Deselect Level
    command(0x20);//-Set Page Addressing Mode (0x00/0x01/0x02)
    command(0x02);//
    command(0xA4);// Disable Entire Display On (0xa4/0xa5)
    command(0xA6);// Disable Inverse Display On (0xa6/a7) 
    command(0xAF);//--turn on oled panel
}

void SH1106_display()
{
    uint8_t page;
    uint8_t *pBuf = oled_buf;
    
    for (page = 0; page < 8; page++) {  
        /* set page address */
        command(0xB0 + page);
        /* set low column address */
        command(0x02); 
        /* set high column address */
        command(0x10); 
        /* write data */
        PORTD |= (1<<OLED_DC);
        SPIWrite(pBuf, WIDTH); 
        pBuf += WIDTH;
    }
}
